# Enterprise-Agents-Solutions-Case-Study

./: .env.example  .gitignore  Case Study Progress Report.xlsx  DEMO_WALKTHROUGH.md  Enterprise_Onboarding_Agent_Progress_Report.md  Onboarding_Status_Mermaid.md  README.md  SOLUTION_DESIGN.md  demo_standalone.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
Solution Design Document/: Solution_Design_Document.tex
app/: __init__.py  main.py  tracing.py
docs/: 01_architecture.mmd  02_decision_flow.mmd  03_mcp_architecture.mmd  CODE_EXPLANATION.md  DEMO_WALKTHROUGH.md  PRESENTER_SCRIPT.md  SOLUTION_DESIGN.md  Solution_Design_Document.tex  VIDEO_SCRIPT.md
production_roadmap/: README.md
reports_output/: audit_ACME-001_20260131_190235.json  audit_ACME-001_20260201_005747.json  audit_AUTH-ERROR_20260201_005824.json  audit_BETA-002_20260131_190826.json  audit_BETA-002_20260201_005754.json  audit_DELETED-004_20260201_005811.json  audit_GAMMA-003_20260131_181058.json  audit_GAMMA-003_20260201_005802.json  audit_MISSING-999_20260131_193708.json  audit_MISSING-999_20260201_005817.json  audit_PERM-ERROR_20260201_005833.json  audit_SERVER-ERROR_20260201_005841.json  email_api_error_AUTH-ERROR_20260201_005824.html  email_api_error_PERM-ERROR_20260201_005833.html  email_api_error_SERVER-ERROR_20260201_005841.html  email_blocked_BETA-002_20260131_190826.html  email_blocked_BETA-002_20260201_005754.html  email_blocked_DELETED-004_20260201_005811.html  email_blocked_MISSING-999_20260131_193708.html  run_report_ACME-001_20260131_190235.md  (+16 more)
(+54 files in other folders)
